--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     },
     "autoload": {
         "psr-4": {
-            "app\\": "app/"
+            "app\\": "app/",
+            "cores\\": "cores"
         }
     },
     "minimum-stability": "dev"
